--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             var timer = setInterval(displayWorldTime, 1000);
             
             var cities = [
-                {name: "Istanbul", utcOffset: 3, flag: "Turkey.png"},
-                {name: "New York City", utcOffset: -5, flag: "United-States-of-America.png"},
-                {name: "Tokyo", utcOffset: 9, flag: "Japan.png"},
-                {name: "Moscow", utcOffset: 3, flag: "Russia.png"},
-                {name: "Rio De Janeiro", utcOffset: -3, flag: "Brazil.png"},
-                {name: "Sydney", utcOffset: 11, flag: "Australia.png"},
-                {name: "Vancouver", utcOffset: -8, flag: "Canada.png"},
-                {name: "Beijing", utcOffset: 8, flag: "China.png"}
+                {name: "Pretoria", utcOffset: 2, flag: "South-Africa.png"},
+                {name: "Lagos", utcOffset: 1, flag: "Nigeria.png"},
+                {name: "Dubai", utcOffset: 4, flag: "United-Arab-Emirates.png"},
+                {name: "Miami", utcOffset: -5, flag: "United-States-of-America.png"},
+                {name: "London", utcOffset: 0, flag: "United-Kingdom.png"},
+                {name: "Paris", utcOffset: 1, flag: "France.png"},
+                {name: "Barcelona", utcOffset: 1, flag: "Spain.png"},
+                {name: "Lisbon", utcOffset: 0, flag: "Portugal.png"}
             ]
             
             cities.sort(compare);
